added slideshow design

--- a/assets/component-slideshow.css
+++ b/assets/component-slideshow.css
@@ -31,6 +31,11 @@ slideshow-component .slideshow.banner {
 .slideshow__slide > .image-with-text__media-item {
   border: 2px solid rgba(var(--color-base-accent-1));
   padding: 10px;
+  z-index: 2;
+}
+
+.slideshow__text-wrapper {
+  z-index: 0;
 }
 
 @media screen and (max-width: 749px) {
@@ -40,17 +45,23 @@ slideshow-component .slideshow.banner {
   }
   .slideshow__slide {
   flex-direction: column;
-  height: 25rem;
   }
+
   .slideshow__slide > .image-with-text__media-item {
     width: 20rem;
     margin: 0 auto;
   }
 
   .slideshow__text-wrapper {
-    z-index: 0;
-    position: absolute;
-    top: 80%;
+    margin-top: -10rem;
+  }
+
+  .slideshow__text {
+    padding-top: 10rem;
+  }
+
+  .slideshow__text > * {
+    max-width: 100%;
   }
 }
 
@@ -65,15 +76,22 @@ slideshow-component .slideshow.banner {
     }
   .slideshow__slide > .image-with-text__media-item {
     top: 15%;
-    width: 25rem;
-    height: 35rem;
+    width: 30rem;
+    height: 40rem;
     position: absolute;
     left: 25%;
-    z-index: 2;
   }
   .slideshow__text-wrapper {
-    left: 17%;
+    left: 10%;
     top: 0;
+  }
+
+  .slideshow__text {
+    padding-left: 10rem;
+  }
+
+  .slideshow__text > * {
+  max-width: 70%;
   }
 }
 
@@ -84,11 +102,9 @@ slideshow-component .slideshow.banner {
   max-width: 54.5rem;
   border: 0.4rem solid var(--gradient-base-background-1);
   border-radius: 0.3rem;
+  background-color: #FFF7EA;
 }
 
-.slideshow__text > * {
-  max-width: 70%;
-}
 
 @media screen and (max-width: 749px) {
   slideshow-component.page-width .slideshow__text {
