modified multicolumn with image layer and heading overlay, and image url

--- a/assets/base.css
+++ b/assets/base.css
@@ -3084,8 +3084,9 @@ details-disclosure > details {
   opacity: 1;
 }
 
-.text-hover h3 {
+.text-on-image h3 {
   position: absolute;
+  z-index: 4;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
