--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -42,11 +42,24 @@
 
 .multicolumn-card__image {
   max-width: 100%;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
+  z-index: 0;
+}
+
+/* Image layer */
+
+.image-layer {
+  background: rgba(243, 231, 211, 0.85);
+  z-index: 2;
+  position: absolute;
+  width: 80% !important;
+  height: 80% !important;
+  top: 10% !important;
+  left: 10% !important;
 }
 
 @media screen and (min-width: 750px) {
