--- a/sections/multicolumn.liquid
+++ b/sections/multicolumn.liquid
@@ -34,28 +34,21 @@
   endif
 -%}
 
-<div
-  class="multicolumn color-{{ section.settings.color_scheme }} gradient{% unless section.settings.background_style == 'none' and settings.text_boxes_border_thickness > 0 or settings.text_boxes_shadow_opacity > 0 %} background-{{ section.settings.background_style }}{% endunless %}{% if section.settings.title == blank %} no-heading{% endif %}">
-  <div
-    class="page-width section-{{ section.id }}-padding isolate">
+<div class="multicolumn color-{{ section.settings.color_scheme }} gradient{% unless section.settings.background_style == 'none' and settings.text_boxes_border_thickness > 0 or settings.text_boxes_shadow_opacity > 0 %} background-{{ section.settings.background_style }}{% endunless %}{% if section.settings.title == blank %} no-heading{% endif %}">
+  <div class="page-width section-{{ section.id }}-padding isolate">
     {%- unless section.settings.title == blank -%}
-      <div
-        class="title-wrapper-with-link title-wrapper--self-padded-mobile title-wrapper--no-top-margin">
-        <h2
-          class="title {{ section.settings.heading_size }}">
+      <div class="title-wrapper-with-link title-wrapper--self-padded-mobile title-wrapper--no-top-margin">
+        <h2 class="title {{ section.settings.heading_size }}">
           {{ section.settings.title | escape }}
         </h2>
         {%- if section.settings.button_label != blank and show_mobile_slider -%}
-          <a
-            href="{{ section.settings.button_link }}"
-            class="link underlined-link large-up-hide">
+          <a href="{{ section.settings.button_link }}" class="link underlined-link large-up-hide">
             {{- section.settings.button_label | escape -}}
           </a>
         {%- endif -%}
       </div>
     {%- endunless -%}
-    <slider-component
-      class="slider-mobile-gutter">
+    <slider-component class="slider-mobile-gutter">
       <ul
         class="multicolumn-list contains-content-container grid grid--{{ section.settings.columns_mobile }}-col-tablet-down grid--{{ section.settings.columns_desktop }}-col-desktop{% if show_mobile_slider %} slider slider--mobile grid--peek{% endif %}"
         id="Slider-{{ section.id }}"
@@ -84,69 +77,78 @@
             id="Slide-{{ section.id }}-{{ forloop.index }}"
             class="multicolumn-list__item grid__item{% if section.settings.swipe_on_mobile %} slider__slide{% endif %}{% if section.settings.column_alignment == 'center' %} center{% endif %}{{ empty_column }}"
             {{ block.shopify_attributes }}>
-            <div
-              class="multicolumn-card content-container">
+            <div class="multicolumn-card content-container">
               {%- if block.settings.image != blank -%}
                 {% if section.settings.image_ratio == 'adapt' or section.settings.image_ratio == 'circle' %}
                   {% assign spaced_image = true %}
                 {% endif %}
-                <div
-                  class="multicolumn-card__image-wrapper multicolumn-card__image-wrapper--{{ section.settings.image_width }}-width{% if section.settings.image_width != 'full' or spaced_image %} multicolumn-card-spacing{% endif %}">
-                  <div
-                    class="media media--transparent media--{{ section.settings.image_ratio }}"
-                    style='
-                    {% if section.settings.image_ratio == 'adapt' %}
-                      padding-bottom: {{ 1 | divided_by: highest_ratio | times: 100 }}%;
-                    {% endif %}'>
-                    {%- capture sizes -%}
-                      (min-width: 990px)
-                      {% if section.blocks.size <= 2 %}710px{% else %}550px{% endif %}, (min-width:
-                      750px)
-                      {% if section.blocks.size == 1 %}710px{% else %}550px{% endif %}, calc(100vw - 30px)
-                    {%- endcapture -%}
+                <div class="multicolumn-card__image-wrapper multicolumn-card__image-wrapper--{{ section.settings.image_width }}-width{% if section.settings.image_width != 'full' or spaced_image %} multicolumn-card-spacing{% endif %}">
+                  <a
+                    {% if block.settings.image_link == blank %}
+                    role="link"
+                    aria-disabled="true"
+                    {% else %}
+                    href="{{ block.settings.image_link }}"
+                    {% endif %}>
                     <div
-                      class="{%- if block.settings.enable_image_hover == true -%}current-image{% endif %}"
-                      {%- if block.settings.image_3 != blank -%}
-                      style='background-image: url("{{ block.settings.image_3 | image_url: width: 200 }}"); background-repeat: no-repeat; background-size: contain;'
-                      {% endif %}>
-                      {{
-                         block.settings.image
-                       | image_url: width: 1420
-                       | image_tag:
-                       loading: 'lazy',
-                       sizes: sizes,
-                       widths: '275, 550, 710, 1420',
-                       class: 'multicolumn-card__image' }}
-                    </div>
-                    {%- if block.settings.image_2 != blank and block.settings.enable_image_hover == true -%}
+                      class="media media--transparent media--{{ section.settings.image_ratio }}"
+                      style='
+                      {% if section.settings.image_ratio == 'adapt' %}
+                        padding-bottom: {{ 1 | divided_by: highest_ratio | times: 100 }}%;
+                      {% endif %}'>
+                      {%- capture sizes -%}
+                        (min-width: 990px)
+                        {% if section.blocks.size <= 2 %}710px{% else %}550px{% endif %}, (min-width:
+                        750px)
+                        {% if section.blocks.size == 1 %}710px{% else %}550px{% endif %}, calc(100vw - 30px)
+                      {%- endcapture -%}
                       <div
-                        class="hover">
-                        {{ block.settings.image_2
-                         | image_url: width: 200
+                        class="{%- if block.settings.enable_image_hover == true -%}current-image{% endif %}"
+                        {%- if block.settings.image_3 != blank -%}
+                        style='background-image: url("{{ block.settings.image_3 | image_url: width: 200 }}"); background-repeat: no-repeat; background-size: contain;'
+                        {% endif %}>
+                        {{
+                           block.settings.image
+                         | image_url: width: 1420
                          | image_tag:
                          loading: 'lazy',
                          sizes: sizes,
                          widths: '275, 550, 710, 1420',
                          class: 'multicolumn-card__image' }}
                       </div>
-                    {% endif %}
-                    {% if block.settings.title != blank and block.settings.heading_on_hover == true %}
-                      <div
-                        class="hover text-hover">
-                        <h3>{{ block.settings.title | escape }}</h3>
-                      </div>
-                    {% endif %}
-                  </div>
+                      {% if block.settings.add_image_layer == true %}
+                        <div class="image-layer"></div>
+                      {% endif %}
+                      {%- if block.settings.image_2 != blank and block.settings.enable_image_hover == true -%}
+                        <div class="hover">
+                          {{ block.settings.image_2
+                           | image_url: width: 200
+                           | image_tag:
+                           loading: 'lazy',
+                           sizes: sizes,
+                           widths: '275, 550, 710, 1420',
+                           class: 'multicolumn-card__image' }}
+                        </div>
+                      {% endif %}
+                      {% if block.settings.title != blank and block.settings.heading_on_image == true %}
+                        <div class="{% if block.settings.heading_on_hover == true %} hover {%endif%} text-on-image">
+                          <h3
+                            style="{% if block.settings.add_image_layer == true %}color: #988D7B; text-shadow: none{%endif%}"
+                            {% if section.settings.columns_desktop < 3 %}
+                            class="h2"
+                            {% endif %}>{{ block.settings.title | escape }}</h3>
+                        </div>
+                      {% endif %}
+                    </div>
+                  </a>
                 </div>
               {%- endif -%}
-              <div
-                class="multicolumn-card__info">
-                {%- if block.settings.title != blank and block.settings.heading_on_hover == false -%}
-                  <h3>{{ block.settings.title | escape }}</h3>
+              <div class="multicolumn-card__info">
+                {%- if block.settings.title != blank and block.settings.heading_on_image == false -%}
+                  <h3 class="{% if block.settings.heading_on_hover == true %} hover {%endif%}">{{ block.settings.title | escape }}</h3>
                 {%- endif -%}
                 {%- if block.settings.text != blank -%}
-                  <div
-                    class="rte">{{ block.settings.text }}</div>
+                  <div class="rte">{{ block.settings.text }}</div>
                 {%- endif -%}
                 {%- if block.settings.link_label != blank -%}
                   <a
@@ -167,8 +169,7 @@
       </ul>
 
       {%- if show_mobile_slider -%}
-        <div
-          class="slider-buttons no-js-hidden medium-hide">
+        <div class="slider-buttons no-js-hidden medium-hide">
           <button
             type="button"
             class="slider-button slider-button--prev"
@@ -176,18 +177,13 @@
             aria-label="{{ 'general.slider.previous_slide' | t }}">
             {% render 'icon-caret' %}
           </button>
-          <div
-            class="slider-counter caption">
-            <span
-              class="slider-counter--current">1</span>
-            <span
-              aria-hidden="true">
+          <div class="slider-counter caption">
+            <span class="slider-counter--current">1</span>
+            <span aria-hidden="true">
               /
             </span>
-            <span
-              class="visually-hidden">{{ 'general.slider.of' | t }}</span>
-            <span
-              class="slider-counter--total">{{ section.blocks.size }}</span>
+            <span class="visually-hidden">{{ 'general.slider.of' | t }}</span>
+            <span class="slider-counter--total">{{ section.blocks.size }}</span>
           </div>
           <button
             type="button"
@@ -199,8 +195,7 @@
         </div>
       {%- endif -%}
     </slider-component>
-    <div
-      class="center{% if show_mobile_slider %} small-hide medium-hide{% endif %}">
+    <div class="center{% if show_mobile_slider %} small-hide medium-hide{% endif %}">
       {%- if section.settings.button_label != blank -%}
         <a
           class="button button--primary"
@@ -416,24 +411,38 @@
           },
           {
             "type": "checkbox",
-            "id": "enable_image_hover",
+            "id": "add_image_layer",
             "default": false,
-            "label": "t:sections.multicolumn.blocks.column.settings.enable_image_hover.label"
+            "label": "t:sections.multicolumn.blocks.column.settings.add_image_layer.label"
           },
           {
-            "type": "image_picker",
-            "id": "image_2",
-            "label": "t:sections.multicolumn.blocks.column.settings.image_2.label"
+            "type": "url",
+            "id": "image_link",
+            "label": "t:sections.multicolumn.blocks.column.settings.image_link.label"
           },
           {
             "type": "image_picker",
             "id": "image_3",
             "label": "t:sections.multicolumn.blocks.column.settings.image_3.label"
           }, {
+            "type": "checkbox",
+            "id": "enable_image_hover",
+            "default": false,
+            "label": "t:sections.multicolumn.blocks.column.settings.enable_image_hover.label"
+          }, {
+            "type": "image_picker",
+            "id": "image_2",
+            "label": "t:sections.multicolumn.blocks.column.settings.image_2.label"
+          }, {
             "type": "text",
             "id": "title",
             "default": "Column",
             "label": "t:sections.multicolumn.blocks.column.settings.title.label"
+          }, {
+            "type": "checkbox",
+            "id": "heading_on_image",
+            "default": false,
+            "label": "t:sections.multicolumn.blocks.column.settings.heading_on_image.label"
           }, {
             "type": "checkbox",
             "id": "heading_on_hover",
